--- a/packages/frontend/index.html
+++ b/packages/frontend/index.html
@@ -19,9 +19,8 @@
         <h1>Third-Party Data</h1>
       </div>
       <div id="button-bar" class="col-6">
-        <button id="btn-integration-list" class="btn btn-secondary admin-btn float-end me-2" type="button">See integrations</button>
-        <button id="btn-integration-add" class="btn btn-primary admin-btn float-end me-2" type="button">Add integration</button>
-        <button id="btn-close" class="btn btn-secondary" type="button">Close</button>
+        <button id="btn-integration-list" class="btn btn-secondary admin-btn float-end ms-2" type="button">See integrations</button>
+        <button id="btn-integration-add" class="btn btn-primary admin-btn float-end ms-2" type="button">Add integration</button>
       </div>
     </div>
     <div id="content" class="my-4"></div>
